--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -33,3 +33,11 @@
         </div>
     </nav>
 </header>
+
+
+<div class="sidenav">
+    <a href="#about">About</a>
+    <a href="#services">Lastest posts</a>
+    <a href="#clients">Upcoming events</a>
+    <a href="#contact">Contact</a>
+</div>
