--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -5,10 +5,11 @@
     <div class="nav-wrap">
       <nav class="main-nav" role="navigation">
         <ul class="unstyled list-hover-slide">
-          <li><a href="#">Home</a></li>
+          <li><a routerLink="/home/create-topic">Create a topic</a></li>
           <li><a routerLink= "/home/create-post">Write a post</a></li>
-          <li><a href="#">Upcoming event</a></li>
-          <li><a href="#">Blog</a></li>
+          <li><a routerLink="/home/list-event">Upcoming events</a></li>
+          <li><a href="#">Host event</a></li>
+          <li><a href="#">Today questions</a></li>
         </ul>
       </nav>
       <ul class="social-links list-inline unstyled list-hover-slide">
