--- a/src/app/post/create-post/create-post.component.html
+++ b/src/app/post/create-post/create-post.component.html
@@ -1,6 +1,9 @@
 <div class="container">
+  
     <div class="row">
+      <img src="/assets/img/imm.png">
       <hr />
+     
       <div class="create-post-container col-md-9">
         <form class="post-form" [formGroup]="createPostForm" (ngSubmit)="createPost()">
           <div class="form-group">
