--- a/src/app/subreddit/create-subreddit/create-subreddit.component.html
+++ b/src/app/subreddit/create-subreddit/create-subreddit.component.html
@@ -1,9 +1,9 @@
-<div class="container">
+<div class="container topic">
     <div class="row">
       <div class="create-subreddit-container">
         <form class="post-form" [formGroup]="createSubredditForm" (ngSubmit)="createSubreddit()">
           <div class="form-group">
-            <div class="create-subreddit-heading">Create Subreddit</div>
+            <div class="create-subreddit-heading">Create a new topic</div>
             <hr />
             <input type="text" [formControlName]="'title'" class="form-control" style="margin-top: 5px"
               placeholder="Title">
@@ -20,14 +20,14 @@
       </div>
       <div class="col-md-3">
         <div class="sidebar">
-          <h5 class="guidelines">Posting to Spring Reddit</h5>
+          <h5 class="guidelines">List of topics</h5>
           <hr />
           <ul>
-            <li>Remember the human</li>
+            <li>Covid-19</li>
             <hr />
-            <li>Behave like you would in real life</li>
+            <li>medicaments feedbacks</li>
             <hr />
-            <li>Don't spam</li>
+            <li>other</li>
             <hr />
           </ul>
         </div>
