--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -8,7 +8,7 @@
           <li><a routerLink="/home/create-topic">Create a topic</a></li>
           <li><a routerLink= "/home/create-post">Write a post</a></li>
           <li><a routerLink="/home/list-event">Upcoming events</a></li>
-          <li><a href="#">Host event</a></li>
+          <li><a routerLink="/home/add-event">Host event</a></li>
           <li><a href="#">Today questions</a></li>
         </ul>
       </nav>
@@ -16,7 +16,7 @@
         <li><a href="#">Twitter</a></li>
         <li><a href="#">Google+</a></li>
         <li><a href="#">GitHub</a></li>
-        <li><a href="#">CodePen</a></li>
+        
       </ul>
     </div>
   </header>
