--- a/src/app/add-event/add-event.component.html
+++ b/src/app/add-event/add-event.component.html
@@ -1,1 +1,36 @@
-<p>add-event works!</p>
+<div class="container">
+  
+    <div class="row">
+      <img src="/assets/img/imm.png">
+      <hr />
+     
+      <div class="create-post-container col-md-9">
+        <form class="post-form" [formGroup]="createPostForm">
+          <div class="form-group">
+            <div class="create-post-heading">Host an avent</div>
+            <hr />
+            <input type="text" [formControlName]="'postName'" class="form-control" style="margin-top: 5px"
+              placeholder="Title">
+  
+            <input type="text" class="form-control" [formControlName]="'url'" style="margin-top: 5px" placeholder="description">
+  
+            <select class="form-control" style="margin-top: 10px" [formControlName]="'subredditName'">
+              <option value="" selected disabled>Select the type</option>
+              <option>Online</option>
+              <option>Pesential</option>
+            </select>
+            <input type="date" class="form-control" [formControlName]="'url'" style="margin-top: 5px" placeholder="Start date">
+            <input type="text" class="form-control" [formControlName]="'url'" style="margin-top: 5px" placeholder="duration">
+
+           
+            <span>
+              <div style="margin-top: 5px" class="float-right">
+                <button (click)="discardPost()" class="btnDiscard">Discard</button>
+                <button class="btnCreatePost">Add</button>
+              </div>
+            </span>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
