--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -5,6 +5,7 @@
     <div class="nav-wrap">
       <nav class="main-nav" role="navigation">
         <ul class="unstyled list-hover-slide">
+          <li><a routerLink="/home/list-post">Lastest post</a></li>
           <li><a routerLink="/home/create-topic">Create a topic</a></li>
           <li><a routerLink= "/home/create-post">Write a post</a></li>
           <li><a routerLink="/home/list-event">Upcoming events</a></li>
